--- a/style.css
+++ b/style.css
@@ -57,3 +57,23 @@ header{
    margin-top: 50px;
    margin-left: 300px;
 }
+
+
+/*----------------
+Style of body
+ -----------------*/
+ .player-container{
+
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   margin-top: 30px;
+   margin-left: 30px;
+   width: 1050px;
+   
+ }
+
+ .first-row-image img{
+
+   width: 300px;
+   height: 256px;
+ }
